# WebAuthTester

./: Dockerfile  MODULES_USAGE_GUIDE.md  RAPTOR-PRO_OFFICIAL_REPORT.md  README.md  WebAuthTester.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
docs/: MODULES_USAGE_GUIDE.md  RAPTOR-PRO_OFFICIAL_REPORT.md  WebAuthTester.md
tests/: test_brute.py  test_differential.py  test_engine.py
webauthtester/: __init__.py  __main__.py  cli.py
webauthtester/core/: engine.py  models.py  utils.py
webauthtester/modules/: base.py  firebase_auth.py  form_auth.py  json_auth.py  oauth_auth.py
wordlists/: admin_user.txt  usernames.txt
